--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,4 +1,4 @@
-$colorPrimario: #FFBB5C;
-$colorSecundario: #FFBB5C;
-$colorComplemento: #C63D2F;
-$colorTerciario: #E25E3E;
+$colorPrimario: #ffbb5c;
+$colorSecundario: #ffbb5c;
+$colorComplemento: #c63d2f;
+$colorTerciario: #e25e3e;
