--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,36 @@ main .carrito-resumen-plata-compra .carrito-resumen-padre .precio-productos-fina
 main .carrito-resumen-plata-compra .carrito-resumen-padre .precio-productos-final h1 {
   margin: 0;
 }
+main .carrito-resumen-plata-compra .carrito-resumen-padre .producto-boton-comprar {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: #fa6400;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
 main .main-inferior {
   display: flex;
@@ -235,6 +265,18 @@ main .main-inferior .main-caja-productos {
   width: 75%;
   border-radius: 20px;
   margin-left: 5%;
+}
+main .main-inferior .main-caja-productos .productos-cargando {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .main-inferior .main-cantidad-productos {
+  display: flex;
+  flex-direction: column;
+}
+main .main-inferior .carrito-simple-main img {
+  height: 20px;
 }
 
 main .main-caja-busqueda {
@@ -348,13 +390,6 @@ main .main-caja-productos .main-producto-compra .producto-div-boton-agregar .bot
   touch-action: manipulation;
   vertical-align: middle;
   white-space: nowrap;
-}
-
-.carrito-main-caja {
-  border-color: #E25E3E;
-  border-style: dashed;
-  height: 100px;
-  width: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
